--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -136,17 +136,32 @@
     "Besides, let's consider that:\n",
     "\n",
     "(i) all gravity differences have the same variance $\\sigma_{\\ell}^{2}$;\n",
-    "(ii) all absolute gravity values have the same variance $\\sigma_{\\tilde{g}}^{2}$ and\n",
+    "(ii) all absolute gravity values have the same variance $\\sigma_{g}^{2}$ and\n",
     "(iii) the data are statistically uncorrelated.\n",
     "\n",
-    "In this case, it is possible to estimate the particular parameter vector $\\mathbf{g}^{\\ast}$ minimizing the goal function:\n",
-    "\n",
+    "In this case, it is possible to estimate the particular parameter vector $\\mathbf{g}^{\\ast}$ minimizing the goal function:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\Phi(\\mathbf{g}) = \\left[\\mathbf{d} - \\mathbf{A \\, g} \\right]^{\\top}\\mathbf{W}\\left[\\mathbf{d} - \\mathbf{A \\, g} \\right] \\: ,\n",
-    "$$\n",
-    "\n",
-    "where $\\mathbf{W}$ is a diagonal matrix given by\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{W}$ is a diagonal matrix given by"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\mathbf{W} =\n",
     "\\begin{bmatrix}\n",
@@ -158,26 +173,61 @@
     "0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-2} & 0 \\\\\n",
     "0 & 0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-2}\n",
     "\\end{bmatrix} \\: .\n",
-    "$$\n",
-    "\n",
-    "The particular parameter vector $\\mathbf{g}^{\\ast}$ satisfies the condition:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The particular parameter vector $\\mathbf{g}^{\\ast}$ satisfies the condition:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\nabla \\Phi(\\mathbf{g}^{\\ast}) = \\mathbf{0} \\: .\n",
-    "$$\n",
-    "\n",
-    "The gradient of $\\Phi(\\mathbf{g})$ with respect to $\\mathbf{g}$ is given by:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The gradient of $\\Phi(\\mathbf{g})$ with respect to $\\mathbf{g}$ is given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\nabla \\Phi(\\mathbf{g}) = -2 \\, \\mathbf{A}^{\\top}\\mathbf{W}\\left[\\mathbf{d} - \\mathbf{A} \\mathbf{g} \\right] \\: .\n",
-    "$$\n",
-    "\n",
-    "By substituting $\\mathbf{g}^{\\ast}$ in the equation above and setting the result to the null vector we obtain the following linear system:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By substituting $\\mathbf{g}^{\\ast}$ in the equation above and setting the result to the null vector we obtain the following linear system:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\, \\mathbf{g}^{\\ast} = \\mathbf{A}^{\\top}\\mathbf{W} \\; \\mathbf{d} \\: .\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The solution of this linear system gives the gravity values at all nodes of our simple gravity network. This is an example of the **weighted least-squares estimator**, where $\\mathbf{W}$ is the **weighting matrix**."
    ]
   },
@@ -185,20 +235,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the notebook `least_squares`, we may compute the covariance matrix $\\mathbf{\\Sigma}_{\\mathbf{g}}$ of the parameter vector as follows:\n",
-    "\n",
+    "According to the notebook `least_squares`, we may compute the covariance matrix $\\mathbf{\\Sigma}_{\\mathbf{g}}$ of the parameter vector as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\mathbf{A}^{\\top}\\mathbf{W}\n",
     "\\, \\mathbf{\\Sigma}_{\\mathbf{d}} \\,\n",
     "\\mathbf{W} \\mathbf{A} \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\: ,\n",
-    "$$\n",
-    "\n",
-    "where $\\mathbf{\\Sigma}_{\\mathbf{d}}$ is covariance matrix of $\\mathbf{d}$. Note that $\\mathbf{\\Sigma}_{\\mathbf{d}}$ represents the inverse of the weighting matrix $\\mathbf{W}$. Consequently,\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{\\Sigma}_{\\mathbf{d}}$ is covariance matrix of $\\mathbf{d}$. Note that $\\mathbf{\\Sigma}_{\\mathbf{d}}$ represents the inverse of the weighting matrix $\\mathbf{W}$. Consequently,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\: .\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Then, we may use the diagonal elements of $\\mathbf{\\Sigma}_{\\mathbf{g}}$ to determine the standard deviation of the estimated parameters."
    ]
   },
@@ -264,12 +334,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "978348.5365058575\n",
-      "978208.0463051111\n",
-      "978320.343058459\n",
-      "978309.9432387992\n",
-      "978246.2768907311\n",
-      "978332.1894159912\n"
+      "978240.7080456355\n",
+      "978346.3841503443\n",
+      "978171.6550897671\n",
+      "978185.0132855173\n",
+      "978185.677798744\n",
+      "978201.05226155\n"
      ]
     }
    ],
@@ -302,11 +372,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-140.49020074633881\n",
-      "112.29675334785134\n",
-      "11.846357532194816\n",
-      "-63.666348068160005\n",
-      "-10.399819659767672\n"
+      "105.67610470880754\n",
+      "-174.72906057722867\n",
+      "29.397171782911755\n",
+      "0.6645132265985012\n",
+      "13.358195750275627\n"
      ]
     }
    ],
@@ -327,8 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "978348.5365058575\n",
-      "978332.1894159912\n"
+      "978240.7080456355\n",
+      "978201.05226155\n"
      ]
     }
    ],
@@ -355,24 +425,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-140.373\n",
-      "112.227\n",
-      "12.221\n",
-      "-63.791\n",
-      "-10.386\n"
+      "105.81\n",
+      "-174.7\n",
+      "29.259\n",
+      "0.899\n",
+      "13.518\n"
      ]
     }
    ],
    "source": [
-    "# noise-corrupted data\n",
-    "l = np.round(l_true + np.random.normal(loc=0., scale=np.sqrt(var_l), size=l_true.size), decimals=3)\n",
+    "# noise-corrupted differences data\n",
+    "noise_l = np.random.normal(loc=0., scale=np.sqrt(var_l), size=l_true.size)\n",
+    "l = l_true + noise_l\n",
+    "l = np.round(l, decimals=3)\n",
     "\n",
     "for li in l:\n",
     "    print(li)"
@@ -380,20 +452,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "978348.49\n",
-      "978332.244\n"
+      "978240.627\n",
+      "978201.051\n"
      ]
     }
    ],
    "source": [
-    "g_abs = np.round(g_abs_true + np.random.normal(loc=0., scale=np.sqrt(var_g_abs), size=g_abs_true.size), decimals=3)\n",
+    "# noise-corrupted absolute data\n",
+    "noise_abs = np.random.normal(loc=0., scale=np.sqrt(var_g_abs), size=g_abs_true.size)\n",
+    "g_abs = g_abs_true + noise_abs\n",
+    "g_abs = np.round(g_abs, decimals=3)\n",
     "    \n",
     "for gabsi in g_abs:\n",
     "    print(gabsi)"
@@ -405,7 +480,7 @@
    "source": [
     "By using the data set given above, estimate the gravity values at all nodes of our simple gravity network.\n",
     "\n",
-    "In a Jupyter Notebook:\n",
+    "In a Jupyter Notebook called `grav_net_YOURNAME`:\n",
     "\n",
     "1. Create the matrix $\\mathbf{A}$ by using the indices `i` and `j`;\n",
     "2. Create the data vector $\\mathbf{d}$ by using the arrays `l` and `g`;\n",
