--- a/Content/quick_tests.ipynb
+++ b/Content/quick_tests.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.signal import convolve2d"
    ]
   },
   {
@@ -15,69 +16,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "an = np.arange(5, 9)"
+    "Ma = 4\n",
+    "Na = 4\n",
+    "Mb = 3\n",
+    "Nb = 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 6, 7, 8])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "an"
+    "i, j = np.indices((Ma,Na))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "an.size"
+    "A = np.char.add(i.astype(str), j.astype(str))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 5\n",
-      "1 6\n",
-      "2 7\n",
-      "3 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for ni in range(an.size):\n",
-    "    ani = an[ni]\n",
-    "    print(ni, ani)"
+    "i, j = np.indices((Mb,Nb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = np.char.add(i.astype(str), j.astype(str))"
    ]
   },
   {
@@ -89,16 +67,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 5\n",
-      "1 6\n",
-      "2 7\n",
-      "3 8\n"
+      "[['00' '01' '02' '03']\n",
+      " ['10' '11' '12' '13']\n",
+      " ['20' '21' '22' '23']\n",
+      " ['30' '31' '32' '33']]\n"
      ]
     }
    ],
    "source": [
-    "for ni, ani in enumerate(an):\n",
-    "    print(ni, ani)"
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['00' '01' '02']\n",
+      " ['10' '11' '12']\n",
+      " ['20' '21' '22']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Mw = Ma + Mb - 1\n",
+    "Nw = Na + Nb - 1\n",
+    "\n",
+    "C = np.empty((Mw, Nw), dtype='<U8')\n",
+    "\n",
+    "for j in range(Mw):\n",
+    "    for k in range(Nw):\n",
+    "        for m in range(j+1):\n",
+    "            for n in range(k+1):\n",
+    "                if (m > Ma) or (n > Na):\n",
+    "                    a = 'x'\n",
+    "                else:\n",
+    "                    a = '{!s}{!s}'.format(m,n)\n",
+    "                if ((j-m) < 0) or ((j-m) > Mb):\n",
+    "                    b = 'x'\n",
+    "                elif ((k-n) < 0) or ((k-n) > Nb):\n",
+    "                    b = 'x'\n",
+    "                else:\n",
+    "                    b = '{!s}{!s}'.format(j-m,k-n)\n",
+    "                C[j,k] = '{:>5s}'.format(b+'*'+a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['00*00' '00*01' '00*02' '00*03' '00*04' ' 00*x']\n",
+      " ['00*10' '00*11' '00*12' '00*13' '00*14' ' 00*x']\n",
+      " ['00*20' '00*21' '00*22' '00*23' '00*24' ' 00*x']\n",
+      " ['00*30' '00*31' '00*32' '00*33' '00*34' ' 00*x']\n",
+      " ['00*40' '00*41' '00*42' '00*43' '00*44' ' 00*x']\n",
+      " [' 00*x' ' 00*x' ' 00*x' ' 00*x' ' 00*x' ' 00*x']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(C)"
    ]
   },
   {
