--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -253,23 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{\\Sigma}_{\\mathbf{d}}$ is covariance matrix of $\\mathbf{d}$. Note that $\\mathbf{\\Sigma}_{\\mathbf{d}}$ represents the inverse of the weighting matrix $\\mathbf{W}$. Consequently,"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\: .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, we may use the diagonal elements of $\\mathbf{\\Sigma}_{\\mathbf{g}}$ to determine the standard deviation of the estimated parameters."
+    "where $\\mathbf{\\Sigma}_{\\mathbf{d}}$ is covariance matrix of $\\mathbf{d}$. Note that $\\mathbf{\\Sigma}_{\\mathbf{d}}$ represents the inverse of the weighting matrix $\\mathbf{W}$."
    ]
   },
   {
