--- a/Content/review_math_1.ipynb
+++ b/Content/review_math_1.ipynb
@@ -18,6 +18,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Topics\n",
+    "\n",
+    "* [Parameter vector](#Parameter_vector)\n",
+    "* [Scalar functions](#Scalar_functions)\n",
+    "* [Vector functions](#Vector_functions)\n",
+    "* [Derivatives of scalar and vector functions](#Derivatives)\n",
+    "    * [Derivative 1](#Derivative_1)\n",
+    "    * [Derivative 2](#Derivative_2)\n",
+    "    * [Derivative 3](#Derivative_3)\n",
+    "    * [Derivative 4](#Derivative_4)\n",
+    "    * [Derivative 5](#Derivative_5)\n",
+    "    * [Derivative 6](#Derivative_6)\n",
+    "    * [Derivative 7](#Derivative_7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='Parameter_vector'></a>\n",
     "### Parameter vector"
    ]
@@ -137,7 +156,7 @@
     "collapsed": true
    },
    "source": [
-    "<a id='Vector functions'></a>\n",
+    "<a id='Vector_functions'></a>\n",
     "### Vector functions"
    ]
   },
@@ -236,8 +255,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Derivatives of scalar functions'></a>\n",
-    "### Derivatives of scalar functions"
+    "<a id='Derivatives'></a>\n",
+    "### Derivatives of scalar and vector functions"
    ]
   },
   {
@@ -335,6 +354,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Derivative of vector functions $\\mathbf{f}(\\mathbf{p})$ ([equation 10](#eq10)) are given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq14'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} =\n",
+    "\\begin{bmatrix} \n",
+    "\\frac{\\partial \\, f_{1}(\\mathbf{p})}{\\partial p_{j}} \\\\\n",
+    "\\frac{\\partial \\, f_{2}(\\mathbf{p})}{\\partial p_{j}} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{\\partial \\, f_{N-1}(\\mathbf{p})}{\\partial p_{j}}\n",
+    "\\end{bmatrix} \\quad . \\tag{14}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's consider some particular scalar and vector functions, as well as their partial derivatives with respect to the $j$th parameter $p_{j}$."
    ]
   },
@@ -342,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Derivative 1'></a>\n",
+    "<a id='Derivative_1'></a>\n",
     "#### Derivative 1"
    ]
   },
@@ -350,9 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq14a'></a>\n",
+    "<a id='eq15a'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = \\mathbf{c}^{\\top}\\mathbf{p} \\: , \\tag{14a}\n",
+    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{p} \\: , \\tag{15a}\n",
     "$$"
    ]
   },
@@ -360,9 +402,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq14b'></a>\n",
+    "<a id='eq15b'></a>\n",
     "$$\n",
-    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \\mathbf{c}^{\\top}\\mathbf{u}_{j} \\: , \\tag{14b}\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\frac{\\partial}{\\partial p_{j}} \\mathbf{p} \\\\\n",
+    "&= \\begin{bmatrix} \n",
+    "\\frac{\\partial \\, p_{0}}{\\partial p_{j}} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{\\partial \\, p_{j}}{\\partial p_{j}} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{\\partial \\, p_{M-1}}{\\partial p_{j}}\n",
+    "\\end{bmatrix} \\\\\n",
+    "&= \\mathbf{u}_{j}\n",
+    "\\end{split} \\quad , \\tag{15b}\n",
     "$$"
    ]
   },
@@ -370,14 +423,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{c}$ is a generic constant vector and $\\mathbf{u}_{j}$ is a vector with the $j$th element equal to $1$ and the remaining equal to $0$. It is represented as follows:"
+    "where $\\mathbf{u}_{j}$ is a vector with the $j$th element equal to $1$ and the remaining equal to $0$. It is represented as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq15'></a>\n",
+    "<a id='eq16'></a>\n",
     "$$\n",
     "\\mathbf{u}_{j} = \\begin{bmatrix}\n",
     "0 \\\\\n",
@@ -387,7 +440,7 @@
     "0 \\\\\n",
     "\\vdots \\\\\n",
     "0\n",
-    "\\end{bmatrix} \\: . \\tag{15}\n",
+    "\\end{bmatrix} \\: . \\tag{16}\n",
     "$$"
    ]
   },
@@ -404,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Derivative 2'></a>\n",
+    "<a id='Derivative_2'></a>\n",
     "#### Derivative 2"
    ]
   },
@@ -412,9 +465,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq16a'></a>\n",
+    "Let $\\mathbf{c}$ be a generic constant vector."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq17a'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = \\mathbf{p}^{\\top}\\mathbf{p} \\: , \\tag{16a}\n",
+    "f(\\mathbf{p}) = \\mathbf{c}^{\\top}\\mathbf{p} \\quad , \\tag{17a}\n",
     "$$"
    ]
   },
@@ -422,10 +482,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq16b'></a>\n",
+    "<a id='eq17b'></a>\n",
     "$$\n",
-    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
-    "2 \\, \\mathbf{u}_{j}^{\\top}\\mathbf{p} \\: . \\tag{16b}\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\Bigg\\lbrace \\left( \\frac{\\partial \\, \\mathbf{c}}{\\partial p_{j}} \\right)^{\\top} \\mathbf{p} \\Bigg\\rbrace +\n",
+    "\\Bigg\\lbrace \\mathbf{c}^{\\top} \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\Bigg\\rbrace \\\\\n",
+    "&= \\Bigg\\lbrace \\mathbf{0}^{\\top} \\mathbf{p} \\Bigg\\rbrace + \\Bigg\\lbrace \\mathbf{c}^{\\top} \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\Bigg\\rbrace \\\\\n",
+    "&= \\mathbf{c}^{\\top}\\mathbf{u}_{j}\n",
+    "\\end{split} \\quad . \\tag{17b}\n",
     "$$"
    ]
   },
@@ -441,9 +506,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq17a'></a>\n",
+    "<a id='eq18a'></a>\n",
     "$$\n",
-    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{17a}\n",
+    "f(\\mathbf{p}) = \\mathbf{p}^{\\top}\\mathbf{p} \\quad , \\tag{18a}\n",
     "$$"
    ]
   },
@@ -451,10 +516,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq17b'></a>\n",
+    "<a id='eq18b'></a>\n",
     "$$\n",
-    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} = \n",
-    "\\mathbf{A}^{\\top}\\mathbf{u}_{j} \\: , \\tag{17b}\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\Bigg\\lbrace \\left( \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\right)^{\\top} \\mathbf{p} \\Bigg\\rbrace +\n",
+    "\\Bigg\\lbrace \\mathbf{p}^{\\top} \\left( \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\right) \\Bigg\\rbrace \\\\\n",
+    "&= \\Bigg\\lbrace \\left( \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\right)^{\\top} \\mathbf{p} \\Bigg\\rbrace +\n",
+    "\\Bigg\\lbrace \\left( \\frac{\\partial \\, \\mathbf{p}}{\\partial p_{j}} \\right)^{\\top} \\mathbf{p} \\Bigg\\rbrace \\\\\n",
+    "&= 2 \\, \\mathbf{u}_{j}^{\\top}\\mathbf{p} \n",
+    "\\end{split} \\quad . \\tag{18b}\n",
     "$$"
    ]
   },
@@ -462,14 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{A}$ is a constant matrix."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='Derivative 4'></a>\n",
+    "<a id='Derivative_4'></a>\n",
     "#### Derivative 4"
    ]
   },
@@ -477,29 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq18a'></a>\n",
-    "$$\n",
-    "f(\\mathbf{p}) = \\mathbf{p}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{18a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq17b'></a>\n",
-    "$$\n",
-    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
-    "2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \\: . \\tag{18b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='Derivative 5'></a>\n",
-    "#### Derivative 5"
+    "Let $\\mathbf{A}$ be a generic $N \\times M$ constant matrix with columns $\\mathbf{a}_{j}$, $j = 0, \\dots, M-1$."
    ]
   },
   {
@@ -508,7 +550,7 @@
    "source": [
     "<a id='eq19a'></a>\n",
     "$$\n",
-    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{19a}\n",
+    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{A} \\, \\mathbf{p} \\quad , \\tag{19a}\n",
     "$$"
    ]
   },
@@ -518,8 +560,21 @@
    "source": [
     "<a id='eq19b'></a>\n",
     "$$\n",
-    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} = \n",
-    "-\\mathbf{A}^{\\top}\\mathbf{u}_{j} \\: . \\tag{19b}\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\frac{\\partial}{\\partial p_{j}} \\Big\\lbrace \\mathbf{A} \\, \\mathbf{p} \\Big\\rbrace \\\\\n",
+    "&= \\frac{\\partial}{\\partial p_{j}} \\Big\\lbrace \n",
+    "\\left( p_{0} \\, \\mathbf{a}_{0} \\right) + \\dots +\n",
+    "\\left( p_{j} \\, \\mathbf{a}_{j} \\right) + \\dots +\n",
+    "\\left( p_{M-1} \\, \\mathbf{a}_{M-1} \\right) \n",
+    "\\Big\\rbrace \\\\\n",
+    "&= \\Big\\lbrace \n",
+    "\\left( 0 \\, \\mathbf{a}_{0} \\right) + \\dots +\n",
+    "\\left( 1 \\, \\mathbf{a}_{j} \\right) + \\dots +\n",
+    "\\left( 0 \\, \\mathbf{a}_{M-1} \\right) \n",
+    "\\Big\\rbrace \\\\\n",
+    "&= \\mathbf{A} \\, \\mathbf{u}_{j} \n",
+    "\\end{split} \\quad . \\tag{19b}\n",
     "$$"
    ]
   },
@@ -527,15 +582,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P.S.: Use the [Derivative 3](#Derivative_3)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='Derivative 6'></a>\n",
-    "#### Derivative 6"
+    "<a id='Derivative_5'></a>\n",
+    "#### Derivative 5"
    ]
   },
   {
@@ -544,9 +592,7 @@
    "source": [
     "<a id='eq20a'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = \n",
-    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right)^{\\top}\n",
-    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\: , \\tag{20a}\n",
+    "f(\\mathbf{p}) = \\mathbf{p}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \\quad , \\tag{20a}\n",
     "$$"
    ]
   },
@@ -556,11 +602,93 @@
    "source": [
     "<a id='eq20b'></a>\n",
     "$$\n",
-    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
-    "-2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top}\n",
-    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\: . \\tag{20b}\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}}\n",
+    "&= \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) +  \\left( \\mathbf{A} \\, \\mathbf{p} \\right)^{\\top} \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace \\\\\n",
+    "&= \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) + \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\\\\n",
+    "&= 2 \\, \\left( \\mathbf{A} \\, \\mathbf{u}_{j} \\right)^{\\top} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\\\\n",
+    "&= 2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \n",
+    "\\end{split} \\quad . \\tag{20b}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative_6'></a>\n",
+    "#### Derivative 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq21a'></a>\n",
+    "$$\n",
+    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\quad , \\tag{21a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq21b'></a>\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\frac{\\partial \\, \\mathbf{d}}{\\partial p_{j}} - \n",
+    "\\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{A} \\, \\mathbf{p} \\right) \\\\\n",
+    "&= -\\mathbf{A} \\, \\mathbf{u}_{j} \n",
+    "\\end{split} \\quad . \\tag{21b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative_7'></a>\n",
+    "#### Derivative 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq22a'></a>\n",
+    "$$\n",
+    "f(\\mathbf{p}) = \n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right)^{\\top}\n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\quad , \\tag{22a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq22b'></a>\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} \n",
+    "&= \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) + \n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right)^{\\top} \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace \\\\\n",
+    "&= \\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) + \n",
+    "\\Bigg\\lbrace \\frac{\\partial}{\\partial p_{j}} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\Bigg\\rbrace^{\\top} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\\\\n",
+    "&= 2 \\left( -\\mathbf{A} \\, \\mathbf{u}_{j} \\right)^{\\top} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\\\\n",
+    "&= -2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top} \\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \n",
+    "\\end{split} \\quad . \\tag{22b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
