weighted LS, L1 regression and modifications on previous LS/grav_net

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -135,8 +135,8 @@
    "source": [
     "Besides, let's consider that:\n",
     "\n",
-    "(i) all gravity differences have the same variance $\\sigma_{\\ell}^{2}$;\n",
-    "(ii) all absolute gravity values have the same variance $\\sigma_{g}^{2}$ and\n",
+    "(i) all gravity differences have the same standard deviation $\\sigma_{\\ell}$;\n",
+    "(ii) all absolute gravity values have the same standard deviation $\\sigma_{g}$ and\n",
     "(iii) the data are statistically uncorrelated.\n",
     "\n",
     "In this case, it is possible to estimate the particular parameter vector $\\mathbf{g}^{\\ast}$ minimizing the goal function:"
@@ -163,15 +163,31 @@
    "metadata": {},
    "source": [
     "$$\n",
+    "\\mathbf{W} = \\left( \\mathbf{W}^{\\frac{1}{2}} \\right)^{\\top} \\left( \\mathbf{W}^{\\frac{1}{2}} \\right) \\quad ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
     "\\mathbf{W} =\n",
     "\\begin{bmatrix}\n",
-    "\\sigma_{\\ell}^{-2} & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & \\sigma_{\\ell}^{-2} & 0 & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & \\sigma_{\\ell}^{-2} & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & \\sigma_{\\ell}^{-2} & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & \\sigma_{\\ell}^{-2} & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-2} & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-2}\n",
+    "\\sigma_{\\ell}^{-1} & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & \\sigma_{\\ell}^{-1} & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & \\sigma_{\\ell}^{-1} & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & \\sigma_{\\ell}^{-1} & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & \\sigma_{\\ell}^{-1} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-1} & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & \\sigma_{\\tilde{g}}^{-1}\n",
     "\\end{bmatrix} \\: .\n",
     "$$"
    ]
@@ -243,9 +259,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\mathbf{A}^{\\top}\\mathbf{W}\n",
+    "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\mathbf{A}^{\\top}\\mathbf{W}^{\\frac{1}{2}}\n",
     "\\, \\mathbf{\\Sigma}_{\\mathbf{d}} \\,\n",
-    "\\mathbf{W} \\mathbf{A} \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\: ,\n",
+    "\\mathbf{W}^{\\frac{1}{2}} \\mathbf{A} \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\: ,\n",
     "$$"
    ]
   },
