interpolation with Greens functions

--- a/Content/interpolation_sample_data/magnesium_concentration.ipynb
+++ b/Content/interpolation_sample_data/magnesium_concentration.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Data set shown by Davis (2002, Table 4-2, p. 164) containing measurements of magnesium concentration in stream water at 20 locations. Distances are from stream mouth t o sample locations.\n",
     "\n",
-    "* Davis, J.C. (2002). Statistics and Data Analysis in Geology. 3rt edition, John Wiley & Sons, ISBN 0-47 1-1 7275-8."
+    "* Davis, J.C. (2002). Statistics and Data Analysis in Geology. 3rd edition, John Wiley & Sons, ISBN 0-47 1-1 7275-8."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance, concentration = np.loadtxt('table42_magnesium_concentration.txt', unpack=True)"
+    "distance, concentration = np.loadtxt('magnesium_concentration.txt', unpack=True)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
