include text in polynomial.ipynb

--- a/Content/parabola.ipynb
+++ b/Content/parabola.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fitting a parabola"
+    "# Fitting a parabola with outliers"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulating noise-free and noise-corrupted data"
+    "### Simulating noise-free and noise-corrupted data with outliers"
    ]
   },
   {
