--- a/Content/Neville.ipynb
+++ b/Content/Neville.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file `lagrange_neville.pdf` presents some notes about the Neville's method."
+    "The file `lagrange_neville.pdf` presents some notes about the Neville's method (Kiusalaas, 2013, p. 109).\n",
+    "\n",
+    "#### References\n",
+    "\n",
+    "* Kiusalaas, J. Numerical methods in engineering with Python 3, 3rd edition, Cambridge University Press, 2013, ISBN 978-1-107-03385-6"
    ]
   },
   {
