--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{W} =\n",
+    "\\mathbf{W}^{\\frac{1}{2}} =\n",
     "\\begin{bmatrix}\n",
     "\\sigma_{\\ell}^{-1} & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
     "0 & \\sigma_{\\ell}^{-1} & 0 & 0 & 0 & 0 & 0 \\\\\n",
