--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, instead of determining the vector $\\tilde{\\mathbf{p}}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\tilde{\\mathbf{p}}$ minimizing the **Squared Euclidean norm** (or **<a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">Squared Euclidean distance</a>**) of $\\mathbf{r}$, which is given by:"
+    "In practical situations, instead of determining the vector $\\tilde{\\mathbf{p}}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\tilde{\\mathbf{p}}$ minimizing the **Squared Euclidean norm** (or **<a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">Squared Euclidean distance</a>** or $L_{2}$ norm) of $\\mathbf{r}$, which is given by:"
    ]
   },
   {
