fix problem with log and K0

--- a/Content/greens_interp_2D.ipynb
+++ b/Content/greens_interp_2D.ipynb
@@ -54,7 +54,8 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits import mplot3d\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.special import k0 as K0"
    ]
   },
   {
@@ -134,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77b5a11f8409467c882ce7f23abdfd71",
+       "model_id": "a6763e0c85e1424b857f4aa3278d22d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fec0c8d80eeb4c7c8208eaf037eceb77",
+       "model_id": "e024f14caf5b418e927c24fb107455f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe0dfcbd2ce44afc900c0787031887ec",
+       "model_id": "20769f093a7c4f3c8930380d6227c036",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,15 +309,20 @@
     "    else:\n",
     "        y = p\n",
     "    \n",
-    "    G = np.empty((,))\n",
+    "    G = np.empty((y.shape[0],p.shape[0]))\n",
     "    if tau == 0:\n",
     "        for j, (xj, yj) in enumerate(p):\n",
-    "            r = \n",
-    "            G[:,j] = \n",
+    "            Dx = y[:,0] - xj\n",
+    "            Dy = y[:,1] - yj\n",
+    "            r = np.sqrt(Dx**2 + Dy**2)\n",
+    "            G[:,j] = r*r*(np.log(r + 1e-15) - 1)\n",
     "    else:\n",
     "        for j, (xj, yj) in enumerate(p):\n",
-    "            r = \n",
-    "            G[:,j] = \n",
+    "            Dx = y[:,0] - xj\n",
+    "            Dy = y[:,1] - yj\n",
+    "            r = np.sqrt(Dx**2 + Dy**2)\n",
+    "            #G[:,j] = K0(tau*r + 1e-15) + np.log10(tau*r + 1e-15)\n",
+    "            G[:,j] = K0(tau*r + 1e-15) + np.log(tau*r + 1e-15)\n",
     "\n",
     "    return G"
    ]
@@ -330,7 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dobs = synthetic_relief(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,17 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Coefficients without tension\n",
-    "coeffs_no_tension = "
+    "coeffs_no_tension = np.linalg.solve(G2D_no_tension, dobs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,12 +375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Coefficients with tension\n",
-    "coeffs_tension = "
+    "coeffs_tension = np.linalg.solve(G2D_tension, dobs)"
    ]
   },
   {
@@ -384,42 +399,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute interpolated data without tension\n",
-    "G2D_no_tension_interp = G_2D(distance, t=0, p_interp=np.vstack([np.ravel(x_grid), np.ravel(x_grid)]).T)\n",
+    "G2D_no_tension_interp = G_2D(p=np.vstack([x, y]).T, t=0, \n",
+    "                             p_interp=np.vstack([np.ravel(x_grid), np.ravel(y_grid)]).T)\n",
     "y_no_tension_interp = np.dot(G2D_no_tension_interp, coeffs_no_tension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute interpolated data with tension\n",
-    "G2D_tension_interp = G_2D(distance, t=0.998, p_interp=np.vstack([np.ravel(x_grid), np.ravel(x_grid)]).T)\n",
+    "G2D_tension_interp = G_2D(p=np.vstack([x, y]).T, t=0.998, \n",
+    "                          p_interp=np.vstack([np.ravel(x_grid), np.ravel(y_grid)]).T)\n",
     "y_tension_interp = np.dot(G2D_tension_interp, coeffs_tension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reshape the interpolated points for plotting\n",
-    "y_no_tension_interp = np.reshape(y_no_tension_interp, (Nx, Ny))\n",
-    "y_tension_interp = np.reshape(y_tension_interp, (Nx, Ny))"
+    "y_no_tension_interp = np.reshape(y_no_tension_interp, (Ny, Nx))\n",
+    "y_tension_interp = np.reshape(y_tension_interp, (Ny, Nx))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82c3e2b36d0c40589b9db4d0a8c9b696",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# True model\n",
     "fig = plt.figure()\n",
@@ -433,9 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e637d507485d4ec0ba9d22f110fa121d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Interpolated points without tension\n",
     "fig = plt.figure()\n",
@@ -450,9 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d1379dbcdc34fcba0b0664a83fdd4ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Interpolated points with tension\n",
     "fig = plt.figure()\n",
@@ -464,6 +526,13 @@
     "ax.set_ylabel('y', fontsize=16)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
