implement the cg and cgnr methods

--- a/Content/sd_exact_lsearch.ipynb
+++ b/Content/sd_exact_lsearch.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook presents the method of steepest decent with exact line search for iteratively solving linear linear systems (Golub and Van Loan, 2013, p. 627)."
+    "This notebook presents the method of steepest decent with exact line search for iteratively solving linear systems (Golub and Van Loan, 2013, p. 627)."
    ]
   },
   {
@@ -207,9 +207,8 @@
    "source": [
     "def sd_lsearch(A, dobs, p0, tol, itmax):\n",
     "    '''\n",
-    "    Solve a linear system by using the method of\n",
-    "    steepest decent with exact line seach, where A\n",
-    "    is an N x N symmetric and positive definite matrix.\n",
+    "    Solve a positive-definite linear system by using the \n",
+    "    method of steepest decent with exact line seach.\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
